// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should delete a row when table is nested inside bodied extension 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "extensionKey": "bodied-eh",
        "extensionType": "com.atlassian.confluence.macro.core",
        "layout": "default",
        "parameters": Object {
          "macroMetadata": Object {
            "placeholder": Array [
              Object {
                "data": Object {
                  "url": "",
                },
                "type": "icon",
              },
            ],
          },
          "macroParams": Object {},
        },
      },
      "content": Array [
        Object {
          "attrs": Object {
            "isNumberColumnEnabled": false,
            "layout": "default",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      242,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      308,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      176,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      242,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      308,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "colwidth": Array [
                      176,
                    ],
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "bodiedExtension",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Should delete merged rows from contextual menu and append missing cells to the table 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "1",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#deebff",
                "colwidth": Array [
                  98,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#e6fcff",
                "colwidth": Array [
                  275,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#eae6ff",
                "colwidth": Array [
                  83,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#ffebe6",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colwidth": Array [
                  98,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colwidth": Array [
                  275,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colwidth": Array [
                  83,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#ffebe6",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#e3fcef",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colwidth": Array [
                  98,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colwidth": Array [
                  275,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colwidth": Array [
                  83,
                ],
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#e3fcef",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#deebff",
                "colwidth": Array [
                  98,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#e6fcff",
                "colwidth": Array [
                  275,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#eae6ff",
                "colwidth": Array [
                  83,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;

exports[`Should delete merged rows from contextual menu and decrement rowspan of the spanning cell 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "1",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#deebff",
                "colwidth": Array [
                  98,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#e6fcff",
                "colwidth": Array [
                  275,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#eae6ff",
                "colwidth": Array [
                  83,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#e6fcff",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#fffae6",
                "colspan": 3,
                "colwidth": Array [
                  98,
                  275,
                  83,
                ],
                "rowspan": 2,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#e6fcff",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#e3fcef",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#e3fcef",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  151,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#deebff",
                "colwidth": Array [
                  98,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "2",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#e6fcff",
                "colwidth": Array [
                  275,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "3",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#eae6ff",
                "colwidth": Array [
                  83,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "4",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": "#ffffff",
                "colwidth": Array [
                  152,
                ],
              },
              "content": Array [
                Object {
                  "content": Array [
                    Object {
                      "text": "5",
                      "type": "text",
                    },
                  ],
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
  "version": 1,
}
`;
